# CodeCull

./: .env.example  .gitignore  README.md  README_INIT.md  fly.toml  main.py  mock_flags.json  mock_launchdarkly.json  pyproject.toml
.github/workflows/: scan.yml  sync.yml
app/: main.py
dashboard/: app.py
dashboard/static/: style.css
dashboard/templates/: base.html  index.html  login.html  verify.html
demo_service/: checkout.py  config.py  dashboard_ui.py  pricing.py  search.py  settings.py
demo_service/tests/: test_checkout.py  test_dashboard_ui.py  test_pricing.py  test_search.py  test_settings.py
scanner/: dead_code_analyzer.py  demo_reset.py  devin_integration.py  flag_scanner.py  github_stats.py  pr_sync.py  slack_notify.py  state_store.py
