[tool.poetry]
name = "codecull"
version = "0.1.0"
description = "Automated stale feature flag cleanup system"
authors = ["CodeCull"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.133.1"}
uvicorn = {extras = ["standard"], version = "^0.30.0"}
jinja2 = "^3.1.0"
httpx = "^0.27.0"
python-dotenv = "^1.0.0"
gitpython = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
